--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>RELEASE</version>
+                <version>2.6</version>
 
                 <configuration>
                     <archive>
