add support for custom output format

--- a/rlfantasy.properties
+++ b/rlfantasy.properties
@@ -1,1 +1,2 @@
 player_format=Heeey {name}, {points} pts{position}
+output_format={rank}. {rankLossGain} {teamName} - {owner} ({totalPoints}), Overall MVP: {totalMVP}
