--- a/rlfantasy.properties
+++ b/rlfantasy.properties
@@ -1,2 +1,2 @@
-player_format=Heeey {name}, {points} pts{position}
+player_format={name}, {points} pts{position}
 output_format={rank}.{align}({rankLossGain}) {teamName} - {user} ({totalPoints}), Overall MVP: {totalMVP}
