--- a/template_rlfantasy.properties
+++ b/template_rlfantasy.properties
@@ -1,2 +1,2 @@
 player_format={name}, {points} pts{position}
-output_format={rank}.{align}({rankLossGain}) {teamName} - {user} ({totalPoints}), Overall MVP: {totalMVP}
+output_format={rank}.{align}({rankLossGain}) {teamName} - {user} ({totalPoints}), Overall MVP: {totalMVPs}
